[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/puzzles/wall_puzzle_01_2d.gd" type="Script" id=1]
[ext_resource path="res://assets/puzzles/controls/runes/sun.png" type="Texture" id=2]
[ext_resource path="res://entities/fonts/latin_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/puzzles/controls/runes/day.png" type="Texture" id=4]
[ext_resource path="res://assets/puzzles/controls/runes/yri.png" type="Texture" id=5]
[ext_resource path="res://assets/puzzles/controls/exit.png" type="Texture" id=6]
[ext_resource path="res://assets/puzzles/Marble015_2K_Color.jpg" type="Texture" id=7]
[ext_resource path="res://assets/puzzles/effects/star_08.png" type="Texture" id=8]
[ext_resource path="res://assets/puzzles/controls/back_icon.png" type="Texture" id=9]
[ext_resource path="res://assets/puzzles/controls/runes/os.png" type="Texture" id=10]
[ext_resource path="res://assets/puzzles/controls/runes/ti.png" type="Texture" id=11]
[ext_resource path="res://assets/puzzles/controls/runes/gear.png" type="Texture" id=12]
[ext_resource path="res://assets/puzzles/controls/runes/thorn.png" type="Texture" id=13]
[ext_resource path="res://assets/puzzles/controls/runes/elk.png" type="Texture" id=14]
[ext_resource path="res://assets/puzzles/controls/runes/hail.png" type="Texture" id=15]
[ext_resource path="res://assets/puzzles/controls/runes/empty.png" type="Texture" id=16]
[ext_resource path="res://assets/puzzles/controls/runes/blank.png" type="Texture" id=17]
[ext_resource path="res://assets/puzzles/controls/back_hover_icon.png" type="Texture" id=18]
[ext_resource path="res://assets/puzzles/controls/exit_hover.png" type="Texture" id=19]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 1.0
emission_shape = 3
emission_point_count = 1
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
color = Color( 0.552941, 0.164706, 0.572549, 1 )

[sub_resource type="Animation" id=2]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Dimensional Lock Engaged" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_fonts/normal_font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.72549, 0.286275, 0.305882, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/normal_font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.258824, 0.407843, 0.266667, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Dimensional Lock Disengaged" ]
}

[node name="puzzle" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1.27887
margin_right = 2049.28
margin_bottom = 2048.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="TextureButton" parent="."]
margin_left = 60.0
margin_top = 4.0
margin_right = 188.0
margin_bottom = 132.0
rect_scale = Vector2( 0.25, 0.25 )
mouse_filter = 1
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="out_btn" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 4.0
margin_right = 148.0
margin_bottom = 132.0
rect_scale = Vector2( 0.25, 0.25 )
mouse_filter = 1
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rune_pad" type="Control" parent="."]
margin_left = 447.944
margin_top = 22.9594
margin_right = 487.944
margin_bottom = 62.9594
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vert" type="ColorRect" parent="rune_pad"]
margin_left = -241.719
margin_top = 39.5508
margin_right = -237.719
margin_bottom = 295.551
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vert2" type="ColorRect" parent="rune_pad"]
margin_left = -154.719
margin_top = 38.5508
margin_right = -150.719
margin_bottom = 294.551
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="hor" type="ColorRect" parent="rune_pad"]
margin_left = -312.719
margin_top = 200.551
margin_right = -56.719
margin_bottom = 204.551
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="hor2" type="ColorRect" parent="rune_pad"]
margin_left = -309.719
margin_top = 116.551
margin_right = -53.719
margin_bottom = 120.551
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="rune_buttons" type="Control" parent="rune_pad"]
margin_left = -442.719
margin_top = -42.4492
margin_right = -442.719
margin_bottom = -42.4492
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="os" type="TextureButton" parent="rune_pad/rune_buttons"]
margin_left = 128.326
margin_top = 83.7451
margin_right = 256.326
margin_bottom = 211.745
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="day" type="TextureButton" parent="rune_pad/rune_buttons"]
margin_left = 214.362
margin_top = 83.1152
margin_right = 342.362
margin_bottom = 211.115
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="elk" type="TextureButton" parent="rune_pad/rune_buttons"]
margin_left = 307.288
margin_top = 84.1152
margin_right = 435.288
margin_bottom = 212.115
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gear" type="TextureButton" parent="rune_pad/rune_buttons"]
margin_left = 130.556
margin_top = 170.411
margin_right = 258.556
margin_bottom = 298.411
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thorn" type="TextureButton" parent="rune_pad/rune_buttons"]
margin_left = 212.803
margin_top = 171.411
margin_right = 340.803
margin_bottom = 299.411
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ti" type="TextureButton" parent="rune_pad/rune_buttons"]
margin_left = 305.57
margin_top = 168.521
margin_right = 433.57
margin_bottom = 296.521
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yri" type="TextureButton" parent="rune_pad/rune_buttons"]
margin_left = 305.626
margin_top = 263.107
margin_right = 433.626
margin_bottom = 391.107
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sun" type="TextureButton" parent="rune_pad/rune_buttons"]
margin_left = 214.552
margin_top = 259.037
margin_right = 342.552
margin_bottom = 387.037
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hail" type="TextureButton" parent="rune_pad/rune_buttons"]
margin_left = 130.508
margin_top = 259.817
margin_right = 258.508
margin_bottom = 387.817
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 1
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="puzzle_complete_particles" type="Particles2D" parent="."]
position = Vector2( 247.207, 148.485 )
scale = Vector2( 0.05, 0.05 )
emitting = false
amount = 500
lifetime = 100.0
one_shot = true
speed_scale = 64.0
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 1 )
texture = ExtResource( 8 )

[node name="lock_label" type="RichTextLabel" parent="."]
margin_left = 132.33
margin_top = 6.33032
margin_right = 484.33
margin_bottom = 46.3303
custom_fonts/normal_font = ExtResource( 3 )
meta_underlined = false
text = "Dimensional Lock Engaged"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="lock_label"]
anims/closed = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="code" type="Control" parent="."]
margin_left = 222.0
margin_top = 410.0
margin_right = 262.0
margin_bottom = 450.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="code_1" type="TextureRect" parent="code"]
margin_left = -149.19
margin_top = -38.8932
margin_right = -21.1899
margin_bottom = 89.1068
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rune" type="TextureRect" parent="code/code_1"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="code_2" type="TextureRect" parent="code"]
margin_left = -49.1899
margin_top = -38.8932
margin_right = 78.8101
margin_bottom = 89.1068
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rune" type="TextureRect" parent="code/code_2"]
margin_right = 128.0
margin_bottom = 128.0

[node name="code_3" type="TextureRect" parent="code"]
margin_left = 50.8101
margin_top = -38.8932
margin_right = 178.81
margin_bottom = 89.1068
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rune" type="TextureRect" parent="code/code_3"]
margin_right = 128.0
margin_bottom = 128.0

[node name="code_4" type="TextureRect" parent="code"]
margin_left = 150.81
margin_top = -38.8932
margin_right = 278.81
margin_bottom = 89.1068
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rune" type="TextureRect" parent="code/code_4"]
margin_right = 128.0
margin_bottom = 128.0
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="out_btn" to="." method="_on_out_btn_pressed"]
